--- a/doc/.htaccess
+++ b/doc/.htaccess
@@ -1,4 +1,5 @@
  RewriteEngine on
  RewriteRule f_(.*)	contents/features/$1.html
+ RewriteRule ([^@]*)	 $1
  RewriteCond %{REQUEST_FILENAME} !-f
  RewriteRule ([^.]+)	contents/$1.html
