--- a/doc/.htaccess
+++ b/doc/.htaccess
@@ -1,5 +1,11 @@
  RewriteEngine on
- RewriteRule f_(.*)	contents/features/$1.html
- RewriteRule ([^@]*)	 $1
+ RewriteRule ([^@]*)@.*	 $1 
+ RewriteRule ^f_(.*)	contents/features/$1.html
+ RewriteRule ^d_(.*)	contents/demos/$1.html
+ RewriteRule ^di_(.*)	contents/demos/images/$1.html
+ RewriteRule ^dij_(.*)	contents/demos/images/$1.jpg
+ RewriteRule ^dm_(.*)	contents/demos/musics/$1.html
+ RewriteRule ^s_(.*)	contents/demos/slides/$1.html
+ RewriteRule ^res_(.*)	resources/$1.html
  RewriteCond %{REQUEST_FILENAME} !-f
  RewriteRule ([^.]+)	contents/$1.html
